# iroha-squash

./: Cargo.toml  README.md
cli/: Cargo.toml  build.rs
cli/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs  upgrade.rs
versions/pre-rc-11/: Cargo.toml
versions/pre-rc-11/src/: lib.rs  upgrade.rs
versions/pre-rc-13/: Cargo.toml
versions/pre-rc-13/src/: lib.rs  upgrade.rs
versions/pre-rc-16/: Cargo.toml
versions/pre-rc-16/src/: lib.rs  upgrade.rs
versions/pre-rc-19/: Cargo.toml
versions/pre-rc-19/src/: lib.rs  permissions.rs  upgrade.rs
versions/pre-rc-20/: Cargo.toml
versions/pre-rc-20/src/: lib.rs  upgrade.rs
versions/pre-rc-9/: Cargo.toml
versions/pre-rc-9/src/: lib.rs
