[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"
tempfile = "3.3.0"
anyhow = "1.0.68"
libc ="0.2.139"
argh = "0.1.10"
once_cell = "1.19.0"

[build-dependencies]
quote = "1.0.23"

