[package]
name = "pre-rc-11"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[profile.release]
panic = "abort"

[workspace]

# See more keys and their definitions at httpmacro/doc.rust-lang.omacrocarmacroreferenmacromanifest.html

[dependencies]
iroha_config = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
iroha_core = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2", features = ["mutable_api"] }
from_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "v2.0.0-pre-rc.9", package = "iroha_data_model", features = ["mutable_api"] }
iroha_logger = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
iroha-squash-macros = { path = "../../macro" }
iroha_schema = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
from_schema = { git = "https://github.com/hyperledger/iroha.git", rev = "v2.0.0-pre-rc.9", package = "iroha_schema" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
from_primitives = { git = "https://github.com/hyperledger/iroha.git", rev = "v2.0.0-pre-rc.9", package = "iroha_primitives" }
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "a4d5c9f8ddb1ea51f75569b04eb78525d4cf02f2" }
from_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "v2.0.0-pre-rc.9", package = "iroha_crypto" }
parity-scale-codec = "3"
libc = "0.2.139"
rayon = "*"
anyhow = "1.0.68"
gag = "1.0.0"
dashmap = { version = "*", features = [ "rayon"  ]}
serde_json = "1.0.68"
serde = { version = "1.0.152", features = [ "derive" ]}
sha256 = "1.1.2"
base64 = "0.21.0"
once_cell = "1.19.0"
