[package]
name = "pre-rc-9"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[profile.release]
panic = "abort"

[workspace]

# See more keys and their definitions at httpmacro/doc.rust-lang.omacrocarmacroreferenmacromanifest.html

[dependencies]
iroha_config = { git = "https://github.com/hyperledger/iroha.git", rev = "9273a912c8a97f9ce1bfaa302c7192554f7abf00" }
iroha_core = { git = "https://github.com/hyperledger/iroha.git", rev = "9273a912c8a97f9ce1bfaa302c7192554f7abf00" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "9273a912c8a97f9ce1bfaa302c7192554f7abf00" }
iroha_logger = { git = "https://github.com/hyperledger/iroha.git", rev = "9273a912c8a97f9ce1bfaa302c7192554f7abf00" }
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "9273a912c8a97f9ce1bfaa302c7192554f7abf00" }
iroha-squash-macros = { path = "../../macro" }
parity-scale-codec = "3.2.1"
libc = "0.2.139"
rayon = "*"
anyhow = "1.0.68"
gag = "1.0.0"
dashmap = { version = "*", features = [ "rayon"  ]}
serde_json = "1.0.68"
once_cell = "1.19.0"
